--- a/makefile.emcc
+++ b/makefile.emcc
@@ -1,16 +1,16 @@
-OPT = -O3
-SRCFILES = main_emcc.c engine.c
+OPT = -g0 -O3
+SRCFILES = main_emcc.c engine.c  utils.c audio.c
 SOURCES = $(addprefix src/, $(SRCFILES))
 CC = emcc
 TARGET = index.js
 OBJECTS =$(SOURCES:.c=.bc)
 LDFLAGS= --llvm-lto=3
-LIBS= -lglfw3 -lopenal ../iron/libiron.bc
-CFLAGS = -std=c11 $(OPT) -Wall -Wextra -Werror=implicit-function-declaration -Wformat=0 -D_GNU_SOURCE  -fdiagnostics-color -s USE_GLFW=3 -s WASM=1 -I..
+LIBS= -lglfw3 -lopenal ../iron/libiron.bc ../libicydb/libicydb.bc
+CFLAGS = -std=c11 $(OPT) -Wall -Wextra -Werror=implicit-function-declaration -Wformat=0 -D_GNU_SOURCE  -fdiagnostics-color -s USE_GLFW=3 -s WASM=1 -I.. -I../libicydb/include
 all: $(TARGET)
 $(TARGET): $(OBJECTS)
 	echo building $(OBJECTS)
-	$(CC) $(CFLAGS)  $(OBJECTS) $(LIBS) -o $@
+	$(CC) $(CFLAGS)  $(OBJECTS) $(LIBS) -o $@ --verbose
 
 %.bc: %.c $(HEADERS)
 	$(CC) -c  $(CFLAGS) $< -o $@ -MMD -MF $@.depends
