--- a/makefile.emcc
+++ b/makefile.emcc
@@ -1,6 +1,6 @@
 OPT = -g0 -O3
 SRCFILES = main_emcc.c engine.c  utils.c audio.c
-LEVEL_SOURCES = level1.data level2.data level3.data level4.data
+LEVEL_SOURCES = level1.data level2.data level3.data level4.data level5.data level6.data level7.data
 
 SOURCES = $(addprefix src/, $(SRCFILES))
 CC = emcc
